@@ -7,20 +7,20 @@ import java.util.List;
 
 /**
  * @param <T>
- * @since 21
  */
 // 加强堆
 // 笔记：https://www.cnblogs.com/greyzeng/p/16936506.html
 public class HeapGreater<T> {
 
-    private final ArrayList<T> heap;
-    private final HashMap<T, Integer> indexMap; // 元素在堆中的位置
-    private int heapSize; // 和heap配合使用
-    private final Comparator<? super T> comp;
+    private ArrayList<T> heap;
+    private HashMap<T, Integer> indexMap;
+    private int heapSize;
+    private Comparator<? super T> comp;
 
-    public HeapGreater(Comparator<T> c) {
+    public HeapGreater(Comparator<? super T> c) {
         heap = new ArrayList<>();
         indexMap = new HashMap<>();
+        heapSize = 0;
         comp = c;
     }
 
@@ -37,10 +37,7 @@ public class HeapGreater<T> {
     }
 
     public T peek() {
-        // since jdk 21
-        // before jdk 21 use
-        // heap.get(0)
-        return heap.getFirst();
+        return heap.get(0);
     }
 
     public void push(T obj) {
@@ -50,10 +47,7 @@ public class HeapGreater<T> {
     }
 
     public T pop() {
-        // since jdk 21
-        // before jdk 21 use
-        // heap.get(0)
-        T ans = heap.getFirst();
+        T ans = heap.get(0);
         swap(0, heapSize - 1);
         indexMap.remove(ans);
         heap.remove(--heapSize);
@@ -62,14 +56,11 @@ public class HeapGreater<T> {
     }
 
     public void remove(T obj) {
-        // 用最后一个元素去顶替要删掉的元素
         T replace = heap.get(heapSize - 1);
-        // 要删掉的元素
         int index = indexMap.get(obj);
         indexMap.remove(obj);
         heap.remove(--heapSize);
-        if (obj != replace) { // obj == replace表示删掉的是最后一个位置的数据，此时不需要进行resign操作
-            // 用顶替的元素去填充被删的元素位置
+        if (obj != replace) {
             heap.set(index, replace);
             indexMap.put(replace, index);
             resign(replace);
@@ -83,7 +74,11 @@ public class HeapGreater<T> {
 
     // 请返回堆上的所有元素
     public List<T> getAllElements() {
-        return new ArrayList<>(heap);
+        List<T> ans = new ArrayList<>();
+        for (T c : heap) {
+            ans.add(c);
+        }
+        return ans;
     }
 
     private void heapInsert(int index) {
@@ -115,4 +110,5 @@ public class HeapGreater<T> {
         indexMap.put(o2, i);
         indexMap.put(o1, j);
     }
+
 }
